@@ -1,3 +1,8 @@
+1998-07-06  Alex Lancaster  <alex@santafe.edu>
+
+	* objectbase.h (Arguments): Further clarify use of Arguments with
+	main.m program fragment in Example.
+
 1998-06-25  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* Makefile.am (version.h): Quote SWARM_VERSION value.
